--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,21 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  http: ^0.12.2
   flutter:
     sdk: flutter
+
+  # barcode scanner
+  barcode_scan: ^3.0.0
+
+  # new state management
+  get: ^3.4.1
+  get_storage: ^1.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_svg: ^0.17.4
+  flutter_svg: ^0.18.1
 
 dev_dependencies:
   flutter_test:
